--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,12 @@ license = "BSD-3-Clause"
 
 [dependencies]
 arrayfire = "3.6.3"
-csv = "1.1.1"
-rand = "0.7.0"
-image = "0.22.2"
-walkdir = "2.2.9"
-indicatif = "0.13.0"
-hdf5 = { git = "https://github.com/aldanor/hdf5-rust" }
-hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust" }
+csv = "1.1.3"
+rand = "0.7.3"
+image = "0.23.0"
+walkdir = "2.3.1"
+indicatif = "0.14.0"
+#hdf5 = { git = "https://github.com/aldanor/hdf5-rust" }
+hdf5 = "0.6.0"
+#hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust" }
+hdf5-sys = "0.6.0"
